# kindlomino

./: .gitignore  README.md  config_example.yaml  kindlomino.py  pyproject.toml  requirements.txt  try_socket.py
